--- a/index.html
+++ b/index.html
@@ -1,32 +1,43 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <html>
 <head>
-	<title>About David Thurman</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="assets\css\style.css">
-</head>
+<title>All About David Thurman</title>
+<!-- Linking CSS -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+   <link rel="stylesheet" type="text/css" href="assets\css\style.css">
+                      
+    </head>
 <body>
 
-<div class="topbox" >
-<div class="namebox">
- David Thurman
- </div>
- <nav class="fakebox">
-<a class="a" href="index.html">About | </a>
-<a class="a" href="portfolio.html">Portfolio | </a>
-<a class="a" href="contact.html">Contact</a>
-</nav>
-</div>
+ <!-- NavBar (copied and pasted from WC3) -->
+  <!-- Static navbar -->
+  <nav class="navbar topbox">
+    <div class="container ">
+      <div class="navbar-header text-centerx namebox  ">
+          David Thurman
+       </div>
+   
+      <div id="navbar" class="navbar-right" >
+          <a href="index.html">About |     </a>
+          <a href="portfolio.html">Portfolio |  </a>
+          <a href="contact.html">      Contact</a>
+      </div> 
+      <!--/.nav-collapse -->
+    </div>
+    <!--/.container-fluid -->
+  </nav>
 
-<div class="aboutbox"> 
-<div class="boxed3">
- <p class="head1 text-left ">All About David<p>
+  <div class="container box">
+    <div class="row">
+    
+        <div class="col-xs-9 col-sm-5 col-md-4  box2">
+            <p class="head1 text-left ">All About David<p>
             <hr class="hr1">
 
-       <div id="bruce"> <img class="img" src="assets/images/Bruce.jpeg" alt="Stickman"></div>
+         <div id="bruce"> <img  class="img col-xs-12 col-sm-12" src="assets/images/Bruce.jpeg" alt="Stickman"></div>
       <br><br><br><br>
-      <div>
       <p> I have been a fan of Bruce Springsteen and the E Street Band since 1980. I have been to over 200 shows since 1999 all over the US and around the world. I have made hundreds of friends in my travels and I fell in love with my wife in 2008 while traveling to shows in Europe. We were in Hamburg, Milan, Paris and Copenhagen.</p>
 
       <p> Every show is different and everyone should have something in life they feel this passionate about.</p>
@@ -34,36 +45,29 @@
     <p> When we are not traveling to shows, our dog Jersey keeps us busy. I also have a terrific niece named Rowan and a nephew named Anthony. I am so proud of these two kids and I love being able to make a difference in their lives.</p>
 
     <p>That's about all I have to say right now, back to GW Coding Bootcamp. </p>
-    <p>No Retreat Baby, No Surrender </p> 
+    <p>No Retreat Baby, No Surrender </p>  
+      </div>
+ 
+ 
+ 
+    <div class="col-xs-9 col-sm-4 box2">
+      <p class="head1">Connect with Me<p>
+      <hr class="hr1">
+      <a href="http://gw.bootcampcontent.com/users/MrMayor/projects">
+      <img class="col-xs-2 col-sm-4 " src="assets/images/github.png" alt="Stickman">
+      <a href="https://www.linkedin.com/in/david-thurman-41344438/">
+      <img class="col-xs-2 col-sm-4" src="assets/images/linkedin.png" alt="Stickman">
+      <a href="https://stackoverflow.com/users/8248759/mr-mayor?tab=profile">
+      <img class="col-xs-2 col-sm-4" src="assets/images/overflow.png" alt="Stickman"> 
+      <br><br><br><br>
     </div>
+   </div>
   </div>
-<div class="box1">
-
-<h1 class="head1">Connect with Me</h1>
-</br></br>
-
-<hr class="hr2">
-<a href="http://gw.bootcampcontent.com/users/MrMayor/projects">
-<img src="assets/images/github.png" alt="Stickman">
-<a href="https://www.linkedin.com/in/david-thurman-41344438/">
-<img src="assets/images/linkedin.png" alt="Stickman">
-<a href="https://stackoverflow.com/users/8248759/mr-mayor?tab=profile">
-<img src="assets/images/overflow.png" alt="Stickman">
 </div>
-</div> 
 
-
-
-
-<body>
-</html>
-
-
-
-<footer class="footer">
+<footer class="footer col-xs-9 col-sm-10">
 @ Copyright David W Thurman 2018
 </footer>
-
 
 <body>
 </html>
