--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <!-- Linking CSS -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+   <link rel="stylesheet" type="text/css" href="assets\css\style.css">
                       
     </head>
 <body>
